--- a/XamarinATime/Resources/layout/About.axml
+++ b/XamarinATime/Resources/layout/About.axml
@@ -1,66 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
-  android:id="@+id/ScrollView_about"
-  android:layout_height="wrap_content"
- 	android:layout_width="fill_parent">
-
-  <LinearLayout
-    android:id="@+id/layout_root"
-    android:layout_width="fill_parent"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ScrollView_about"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="#FFFFFF">
-
-    <TextView android:id="@+id/text_1" android:layout_width="fill_parent" android:layout_height="wrap_content"
-             android:layout_marginTop="5dp" android:textStyle="bold" android:textSize="20dp" android:gravity="center"
-             android:textColor="#000000"/>
-
-
-    <TextView android:id="@+id/text_2" android:layout_width="fill_parent" android:layout_height="wrap_content"
-              android:textColor="#000000" android:gravity="center"/>
-
-    <TextView android:id="@+id/text_3" android:layout_width="fill_parent" android:layout_height="wrap_content"
-              android:textColor="#000000" android:gravity="center"/>
-
-    <TextView android:id="@+id/text_4" android:layout_width="fill_parent" android:layout_height="wrap_content"
-              android:textColor="#000000" android:gravity="center"/>
-
-    <TextView android:id="@+id/text_5" android:layout_width="fill_parent" android:layout_height="wrap_content"
-              android:layout_marginTop="6dp" android:textColor="#000000" android:textStyle="bold"/>
-
-    <TextView android:id="@+id/text_6" android:layout_width="fill_parent" android:layout_height="wrap_content"
-              android:textColor="#000000" android:textStyle="bold" />
-
-    <TextView android:id="@+id/text_7" android:layout_width="fill_parent" android:layout_height="wrap_content"
-                android:layout_marginTop="6dp" android:textColor="#000000" android:textStyle="italic"/>
-
-    <TextView android:id="@+id/text_8" android:layout_width="fill_parent" android:layout_height="wrap_content"
-                android:layout_marginTop="5dp" android:textColor="#000000"/>
-
-    <TextView android:id="@+id/text_9" android:layout_width="fill_parent" android:layout_height="wrap_content"
-               android:textColor="#000000"/>
-
-    <TextView android:id="@+id/text_10" android:layout_width="fill_parent" android:layout_height="wrap_content"
-               android:textColor="#000000"/>
-
-    <TextView android:id="@+id/text_11" android:layout_width="fill_parent" android:layout_height="wrap_content"
-               android:textColor="#000000"/>
-
-    <TextView android:id="@+id/text_12" android:layout_width="fill_parent" android:layout_height="wrap_content"
-               android:textColor="#000000"/>
-
-    <TextView android:id="@+id/text_13" android:layout_width="fill_parent" android:layout_height="wrap_content"
-               android:textColor="#000000"/>
-
-    <TextView android:id="@+id/text_14" android:layout_width="fill_parent" android:layout_height="wrap_content"
-               android:textColor="#000000"/>
-
-
-    <Button android:id="@+id/button_2"  android:layout_width="fill_parent" android:layout_height="wrap_content"
-        android:background="@drawable/btn_grey" style="@style/ButtonOkay"
-          android:text="OK"/>
-
-  </LinearLayout>
+    android:layout_width="fill_parent">
+    <LinearLayout
+        android:id="@+id/layout_root"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="#FFFFFF">
+        <TextView
+            android:id="@+id/text_1"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:textStyle="bold"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:textColor="#000000" />
+        <TextView
+            android:id="@+id/text_2"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#000000"
+            android:gravity="center" />
+        <TextView
+            android:id="@+id/text_3"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#000000"
+            android:gravity="center" />
+        <TextView
+            android:id="@+id/text_4"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#000000"
+            android:gravity="center" />
+        <TextView
+            android:id="@+id/text_5"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:textColor="#000000"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/text_6"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#000000"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/text_7"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:textColor="#000000"
+            android:textStyle="italic" />
+        <TextView
+            android:id="@+id/text_8"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:textColor="#000000" />
+        <TextView
+            android:id="@+id/text_9"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#000000" />
+        <TextView
+            android:id="@+id/text_10"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#000000" />
+        <TextView
+            android:id="@+id/text_11"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#000000" />
+        <TextView
+            android:id="@+id/text_12"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#000000" />
+        <TextView
+            android:id="@+id/text_13"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#000000" />
+        <TextView
+            android:id="@+id/text_14"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#000000" />
+        <Button
+            android:id="@+id/button_2"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/btn_grey"
+            style="@style/ButtonOkay"
+            android:text="OK" />
+    </LinearLayout>
 </ScrollView>
